Add all figures and captions for Fig. 1-8, along with some of Results section.

--- a/patricia.tex
+++ b/patricia.tex
@@ -60,6 +60,21 @@ The distance between the nearest dropsonde and the storm track never exceeded 8.
 Storm-relative radial and tangential velocities were computed using the speed and direction of motion along this track.
 
 %---------------------------------------------------------------------------------------%
+\section{Results}
+%---------------------------------------------------------------------------------------%
+
+The center-crossing transects on 21, 22, and 23 October 2015 are shown in Figs. \ref{fig:patricia_ir}a-d, overlaid on infrared brightness temperature images from GOES.
+Stars indicate dropsonde deployment locations and range rings are plotted every 20 km.
+Brightness temperatures colder than -80\textdegree{}C extended over a broad region of Patricia’s circulation on 21 October (Fig. \ref{fig:patricia_ir}a, pink shading).
+Convection was asymmetric about the storm center, with the coldest brightness temperatures (colder than -86\textdegree{}C) confined to a region 60–80 km west of Patricia’s center of circulation.
+By 22 October, Patricia had rapidly intensified to a category 3 hurricane (Fig. \ref{fig:vmax}), with an eye beginning to clear in the infrared (Figs. \ref{patricia_ir}b,c).
+This rapid intensification continued over the next 18 h until the storm’s maximum sustained wind speed reached its peak
+of 185 kt (1 kt = 0.5144 m s\textsuperscript{-1}) at 1200 UTC 23 October (Fig. \ref{fig:vmax}; \citeauthor{Kimberlainetal2016} \citeyear{Kimberlainetal2016}).
+TCI conducted its final flight into Patricia shortly thereafter, crossing over the eye around 2000 UTC (Fig. \ref{fig:patricia_ir}d) as the storm begain to weaken.
+
+
+
+%---------------------------------------------------------------------------------------%
 %FIGURES AND TABLES
 %---------------------------------------------------------------------------------------%
 
@@ -88,4 +103,67 @@ Storm-relative radial and tangential velocities were computed using the speed an
 \centerline{\includegraphics[width=39pc]{figures/fig01_patricia_ir.png}}
 \caption{Infrared brightness temperature (\textdegree{}C) images of Tropical Storm Patricia at (a) 2015 UTC 21 Oct, and Hurricane Patricia at (b) 1830 UTC 22 Oct, (c) 1900 UTC 22 Oct, and (d) 2000 UTC 23 Oct 2015. Stars represent dropsonde deployment locations, with cyan stars marking the center location used for each cross section. Black contours delineate the coldest brightness temperatures, with a contour interval of 2\textdegree{}C starting at -82\textdegree{}C. The mean dropsonde spacing is (a) 7.9, (b) 7.8, (c) 8.0, and (d) 4.4 km for the four flight legs. Range rings are plotted every 20 km.}
 \label{fig:patricia_ir}
+\end{figure*}
+
+%FIGURE 2%
+\begin{figure*}[ht]
+\centerline{\includegraphics[width=39pc]{figures/fig02_patricia-intensity.png}}
+\caption{The maximum wind speed (kt; blue line) throughout Patricia’s lifetime recorded in the National Hurricane Center best track \citep{Kimberlainetal2016}. Vertical lines indicate the times at which the WB-57 passed over the storm center during the four transects shown in Fig. \ref{fig:patricia_ir}.}
+\label{fig:vmax}
+\end{figure*}
+
+%FIGURE 3%
+\begin{figure*}[ht]
+\centerline{\includegraphics[width=16pc]{figures/fig03_cp_temp+theta+pres.png}}
+\caption{(a) Temperature (\textdegree{}C), (b) pressure (hPa), and (c) potential temperature (K) at the cold-point tropopause for flights through the center of Tropical Storm Patricia at 1957 UTC 21 Oct (blue), and Hurricane Patricia at 1823 UTC 22 Oct (green), 1906} UTC 22 Oct (orange), and 2001 UTC 23 Oct (red) 2015. The vertical dashed lines represent the storm center. Compass directions are indicated by letters at each end of the cross section.
+\label{fig:trop}
+\end{figure*}
+
+%FIGURE 4%
+\begin{figure*}[ht]
+\centerline{\includegraphics[width=24pc]{figures/fig04_dtdz+stab.png}}
+\caption{(left) Vertical cross sections of $\Delta T/\Delta z$ [K (100 m)\textsuperscript{-1}; filled contours] and the cold-point tropopause height (green lines) along the transects shown in Fig. 1 on (a) 21; (b),(c) 22; and (d) 23 Oct 2015. Numbers along the bottom of each cross section represent the dropsonde deployment locations shown in Fig. 1 (only odd-numbered dropsondes are labeled here), with number 1 corresponding to the westernmost dropsonde. Compass directions are indicated by letters at each end of the cross sections. Dashed vertical lines mark the storm center and hatching indicates regions of missing values, where linear interpolation is performed in the radial direction. (right) Vertical cross sections of Brunt–Väisälä frequency squared (10\textsuperscript{-4} s\textsuperscript{-2}; filled contours) and cold-point tropopause height (yellow lines) on (e) 21; (f),(g) 22; and (h) 23 Oct 2015.}
+\label{fig:stab}
+\end{figure*}
+
+%FIGURE 5%
+\begin{figure*}[ht]
+\centerline{\includegraphics[width=24pc]{figures/fig05_theta+anomalies.png}}
+\caption{(left) Vertical cross sections of potential temperature (\textdegree{}C; filled contours) and the cold-point tropopause height (green lines) along the transects shown in Fig. 1 on (a) 21; (b), (c) 22; and (d) 23 Oct 2015. Dropsonde locations, compass directions, and hatching as in Fig. 4. (right) Vertical cross sections of the potential temperature anomaly (\textdegree{}C) on (e) 21; (f),(g) 22; and (h) 23 Oct 2015.}
+\label{fig:anomalies}
+\end{figure*}
+
+%FIGURE 6%
+\begin{figure*}[ht]
+\centerline{\includegraphics[width=39pc]{figures/fig06_deltatheta.png}}
+\caption{Vertical cross sections of the potential temperature change (K day\textsuperscript{-1}) from (a) 21 to 22 Oct and (b) 22 to 23 Oct. These panels extend from the 100-km radius in Patricia’s western semicircle to 55 km in the eastern semicircle. The times separating the transects ($\Delta t$) were 22.45 h (21–22 Oct) and 25.63 h (22–23 Oct). To ease comparison between the two time periods, the potential temperature changes are scaled to 24 h by multiplying by ($24/\Delta t$).}
+\label{fig:dtheta}
+\end{figure*}
+
+%FIGURE 7%
+\begin{figure*}[ht]
+\centerline{\includegraphics[width=33pc]{figures/fig07_schematic.png}}
+\caption{Vertical profiles of potential temperature (K) between 16- and 18-km height for the soundings at Patricia’s storm center on 21 Oct (blue), 22 Oct (orange), and 23 Oct 2015 (red). The bolded segment of the blue line denotes the TIL on 21 Oct. (inset) A simplified schematic of mixing across a strongly stable layer, with the solid red line indicating the initial potential temperature profile and the dashed blue line representing the profile after a period of mixing; ‘‘W’’ and ‘‘C’’ represent regions of warming and cooling, respectively, after mixing.}
+\label{fig:schematic}
+\end{figure*}
+
+%FIGURE 8%
+\begin{figure*}[ht]
+\centerline{\includegraphics[width=39pc]{figures/fig08_hovmoller_tbpercent.png}}
+\caption{Radius–time plot of the percent of infrared brightness temperature pixels colder than -80\textdegree{}C. The plot is constructed by counting the number of pixels colder than -80\textdegree{}C in a 5-km-wide radial bin, dividing by the total number of pixels in that bin, and multiplying by 100. This is performed every 5 km, extending from the storm center out to 300-km radius, for each GOES-13 image collected during Patricia’s lifetime (images are available every 30 min). Dashed black lines mark the times at which the WB-57 aircraft crossed over the storm center.}
+\label{fig:hovmoller}
+\end{figure*}
+
+%FIGURE 9%
+\begin{figure*}[ht]
+\centerline{\includegraphics[width=39pc]{figures/fig09_CFTD.png}}
+\caption{}
+\label{fig:CFTD}
+\end{figure*}
+
+%FIGURE 10%
+\begin{figure*}[ht]
+\centerline{\includegraphics[width=39pc]{figures/fig10_velocities.png}}
+\caption{}
+\label{fig:velocities}
 \end{figure*}
