Complete figure captions for Patricia chapter and add three more paragraphs to the Results section.

--- a/aux_files/references.bib
+++ b/aux_files/references.bib
@@ -211,6 +211,15 @@ volume = {69},
 pages = {988-996}
 }
 
+@article{Gentry1967,
+author = {Gentry, R.C.},
+year = {1967},
+title = {{Structure of the upper troposphere and lower stratosphere in the vicinity of Hurricane Isbell, 1964.}},
+journal = {Pap. Meteor. Geophys.},
+volume = {18},
+pages = {293-310}
+}
+
 @article{HockFranklin1999,
 author = {Hock, T. F. and J. L. Franklin},
 year = {1999},
@@ -327,13 +336,22 @@ pages = {2091-2112}
 }
 
 @article{RotunnoEmanuel,
-        author = {Rotunno, R. and K. A. Emanuel},
-        year = {1987},
-        title = {An air-sea interaction theory for tropical cyclones. {P}art {II}: Evolutionary study using a nonhydrostatic axisymmetric numerical model},
-        journal = JAS,
-        volume = {44},
-        pages = {542-561}
-        }
+author = {Rotunno, R. and K. A. Emanuel},
+year = {1987},
+title = {An air-sea interaction theory for tropical cyclones. {P}art {II}: Evolutionary study using a nonhydrostatic axisymmetric numerical model},
+journal = JAS,
+volume = {44},
+pages = {542-561}
+}
+
+@article{Seideletal2001,
+author = {Seidel, D. J. and R. J. Ross and J. K. Angell and G. C. Reid},
+year = {2001},
+title = {{Climatological characterisitcs of the tropical tropopause as revealed by radiosondes.}},
+journal = JGR,
+volume = {106},
+pages = {7857-7878}
+}
 
 @article{SternZhang2013,
 author = {Stern, D. P. and F. Zhang},
@@ -361,6 +379,15 @@ title = {{Convection-permitting simulations of the environment supporting widesp
 journal = MWR,
 volume = {137},
 pages = {1972-1990}
+}
+
+@article{Waco1970,
+author = {Waco, D. E.},
+year = {1970},
+title = {{Temperatures and turbulence at tropopause levels over Hurricane Beulah (1967)}},
+journal = MWR,
+volume = {98},
+pages = {749-755}
 }
 
 @misc{Wyoming2016,
