--- a/patricia.tex
+++ b/patricia.tex
@@ -72,7 +72,41 @@ This rapid intensification continued over the next 18 h until the storm’s maxi
 of 185 kt (1 kt = 0.5144 m s\textsuperscript{-1}) at 1200 UTC 23 October (Fig. \ref{fig:vmax}; \citeauthor{Kimberlainetal2016} \citeyear{Kimberlainetal2016}).
 TCI conducted its final flight into Patricia shortly thereafter, crossing over the eye around 2000 UTC (Fig. \ref{fig:patricia_ir}d) as the storm begain to weaken.
 
+The tropopause temperature, pressure, and $\theta$ observed along these four transects (Fig. \ref{fig:trop}) exhibit strong spatial and temporal variability.
+On 21 October, the tropopause temperature (Fig. \ref{fig:trop}a, blue line) was colder than -80\textdegree{}C at all radii.
+The coldest tropopause temperature observed, -84\textdegree{}C, was located about 45 km west of the storm center, within a region of IR brightness temperatures between -84\textdegree{} and -86\textdegree{}C.
+These cold tropopause temperatures west of the storm center tended to be associated with lower tropopause pressure (Fig. \ref{fig:trop}b, blue line).
+On this day, tropopause $\theta$ (Fig. \ref{fig:trop}c, blue line) varied from 374 K east of the storm center to 385 K west of the storm center.
+By 22 October (green and orange lines), all three tropopause quantities had changed dramatically.
+The tropopause temperature increased everywhere, and at the storm center temperature rose from near -83\textdegree{}C on 21 October to -77\textdegree{}C in the first transect on 22 October (Fig. \ref{fig:trop}a, green line).
+During this same period, the tropopause pressure at the storm center decreased from 93 to 85 hPa.
+This combination of increasing temperature and decreasing pressure led to a $\theta$ increase of greater than 20 K at the tropopause.
+The dropsonde deployed nearest Patricia’s center of circulation during the second transect (orange lines) was missing all data above 11.7 km.
+However, another dropsonde deployed on the northeast edge of the eye observed a tropopause pressure and temperature of 79 hPa and -77\textdegree{}C, respectively.
+This corresponded to a tropopause $\theta$ of 406 K, which was 31 K higher than that observed at the storm center less than 24 h prior.
+These trends continued into 23 October (red lines), by which time the tropopause temperature at the storm center had increased to -72\textdegree{}C and the pressure approached 75 hPa---the highest available data point---in two dropsondes deployed near the southeast edge of the eyewall.
 
+Cross sections of $\Delta T/\Delta z$ [K (100 m)\textsuperscript{-1}; Figs. \ref{fig:stab}a–d] and $N^2$ (10\textsuperscript{-4} s\textsuperscript{-2}; Figs. \ref{fig:stab}e–h) reveal dramatic changes in the static stability structure near the tropopause during Patricia’s RI.
+On 21 October (Fig. \ref{fig:stab}a), the cold-point tropopause was located between 16.9 and 17.4 km---a few hundred meters higher than the annual-mean tropopause height in the tropical east Pacific (see \citeauthor{Seideletal2001} \citeyear{Seideletal2001}, their Fig. 4a).
+A strong TIL (inversions represented by red shading) existed immediately above the tropopause, with temperature increasing upward by 2 K (100 m)\textsuperscript{-1} over a broad region of the circulation.
+This inversion was similar in magnitude to those observed by \cite{Gentry1967} and \cite{Waco1970} in Hurricanes Isbell (1964) and Beulah (1967), and manifested as a 500-m-thick ribbon of N2 greater than 10\textsuperscript{-3} s\textsuperscript{-2} (Fig. 4e).
+The inversion was strongest in the vicinity of the coldest cloud tops (Fig. \ref{fig:patricia_ir}a), reaching magnitudes greater than 4.5 K (100 m)\textsuperscript{-1} at four locations west of the storm center.
+Three of these maxima were accompanied by 100-m upward spikes in tropopause height and stronger lapse rates just below the tropopause than were observed outside of the coldest cloud tops.
+The dropsondes with the strongest inversions---dropsondes 13 and 15---were deployed within the region of coldest IR brightness temperature 40–80 km west of the center.
+This suggests some connection between the presence of localized deep convection and a strong TIL, which will be discussed in section \ref{sec:discussion}.
+
+By 1823 UTC 22 October (Fig. \ref{fig:stab}b), the TIL had thinned and weakened considerably, particularly near the storm center.
+Between 10- and 20-km radius on each side, near the outer edge of the eye, the temperature profile became approximately isothermal above about 16.6 km.
+These isothermal layers corresponded to slightly larger static stability in the 16.5–17-km layer than was observed on the previous day, but smaller static stability above 17 km (cf. Figs. \ref{fig:stab}e,f).
+The decay of the TIL during this period allowed the tropopause height to increase at and southeast of the storm center, as can be seen by comparing the blue and green lines in Fig. \ref{fig:trop}b.
+Northwest of the storm center, meanwhile, the static stability below 17 km increased, and the tropopause height decreased. Some remnants of the TIL remained, with a small region marked by a 2 K (100 m)\textsuperscript{-1} temperature inversion 70–80 km northwest of the storm center.
+Localized areas of large static stability also were present in the 17.5–18.5-km layer.
+
+
+%---------------------------------------------------------------------------------------%
+\section{Discussion}
+\label{sec:discussion}
+%---------------------------------------------------------------------------------------%
 
 %---------------------------------------------------------------------------------------%
 %FIGURES AND TABLES
@@ -129,7 +163,7 @@ TCI conducted its final flight into Patricia shortly thereafter, crossing over t
 %FIGURE 5%
 \begin{figure*}[ht]
 \centerline{\includegraphics[width=24pc]{figures/fig05_theta+anomalies.png}}
-\caption{(left) Vertical cross sections of potential temperature (\textdegree{}C; filled contours) and the cold-point tropopause height (green lines) along the transects shown in Fig. 1 on (a) 21; (b), (c) 22; and (d) 23 Oct 2015. Dropsonde locations, compass directions, and hatching as in Fig. 4. (right) Vertical cross sections of the potential temperature anomaly (\textdegree{}C) on (e) 21; (f),(g) 22; and (h) 23 Oct 2015.}
+\caption{(left) Vertical cross sections of potential temperature (\textdegree{}C; filled contours) and the cold-point tropopause height (green lines) along the transects shown in Fig. 1 on (a) 21; (b), (c) 22; and (d) 23 Oct 2015. Dropsonde locations, compass directions, and hatching as in Fig. \ref{fig:stab}. (right) Vertical cross sections of the potential temperature anomaly (\textdegree{}C) on (e) 21; (f),(g) 22; and (h) 23 Oct 2015.}
 \label{fig:anomalies}
 \end{figure*}
 
@@ -157,13 +191,14 @@ TCI conducted its final flight into Patricia shortly thereafter, crossing over t
 %FIGURE 9%
 \begin{figure*}[ht]
 \centerline{\includegraphics[width=39pc]{figures/fig09_CFTD.png}}
-\caption{}
+\caption{Contoured frequency by time diagram of infrared (IR) brightness temperature (\textdegree{}C) for all IR pixels within 300 km of the storm center observed by GOES-13 throughout Patricia’s lifetime. The plot is constructed by sampling the full distribution of IR brightness temperature within 300 km of the storm center and determining the percentage of pixels that fall into each IR brightness temperature bin (using 2-K-wide bins). Dashed black lines mark the times at which the WB-57 aircraft crossed over the
+storm center.}
 \label{fig:CFTD}
 \end{figure*}
 
 %FIGURE 10%
 \begin{figure*}[ht]
 \centerline{\includegraphics[width=39pc]{figures/fig10_velocities.png}}
-\caption{}
+\caption{Vertical cross sections of (a),(b) storm-relative radial and (c),(d) tangential velocity (m s\textsuperscript{-1}) and the cold-point tropopause height (green lines) in Hurricane Patricia for the two center-crossing transects on 22 Oct 2015. Dropsonde locations, compass directions, and vertical hatching as in Fig. \ref{fig:stab}.}
 \label{fig:velocities}
 \end{figure*}
