Change title of Modeling section to match that of the paper submitted to JAS.

--- a/modeling.tex
+++ b/modeling.tex
@@ -4,7 +4,7 @@
 %                                                                 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
  
-\chapter{The tropopause-layer static stability structure of tropical cyclones: Idealized modeling}
+\chapter{Tropopause evolution in a rapidly intensifying tropical cyclone: A static stability budget analysis in an idealized, axisymmetric framework}
 \resetfootnote %this command starts footnote numbering with 1 again.
 
 %---------------------------------------------------------------------------------------%
